--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-manifest": "^2.4.33",
+    "gatsby-plugin-markdown-pages": "^1.0.3",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-transformer-javascript-frontmatter": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.16",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
