--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Thanawat Gulati",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-manifest": "^2.4.33",
@@ -13,6 +14,9 @@
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-source-fontawesome": "^0.0.1",
+    "gatsby-source-github-api": "^0.2.1",
+    "gatsby-source-graphql": "^2.7.6",
     "gatsby-transformer-javascript-frontmatter": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.16",
